--- a/ExampleCollector/.project
+++ b/ExampleCollector/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JSONVALIDATION</name>
+	<name>ExampleCollector</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -114,5 +114,6 @@
 	<natures>
 		<nature>com.ibm.etools.msgbroker.tooling.applicationNature</nature>
 		<nature>com.ibm.etools.msgbroker.tooling.messageBrokerProjectNature</nature>
+		<nature>com.ibm.etools.mft.bar.ext.barnature</nature>
 	</natures>
 </projectDescription>
